# opensaftboard-v2

./: .env  Cargo.toml  compose.yaml  spec.json
migrations/: 20240924105904_init.sql
src/: error.rs  main.rs  support.rs
src/config/: base.json  config.rs  micro.json  mod.rs  taxonomy.rs
src/middleware/: mod.rs  mw_auth.rs  support.rs
src/routes/: mod.rs
src/routes/accouting/: handlers.rs  mod.rs
