[package]
name = "opensaftboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs","postgres","macros","chrono" ] }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-full","trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"


#build opmized for max speed
[profile.release]
opt-level = 3         # Maximum optimization level
debug = false         # Disable debug info
overflow-checks = false # Disable overflow checks
lto = true            # Enable Link Time Optimization (LTO)
codegen-units = 1     # Use a single codegen unit for better inlining
