[package]
name = "opensaftboard"
version = "0.1.0"
edition = "2024"

[features]
logging = []

[dependencies]
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "macros",
    "chrono",
] }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.22"
serde_with = "3.9.0"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
axum-macros = "0.5"
derive_more = { version = "2", features = ["from", "display"] }
strum_macros = "0.27.1"


#build opmized for lowest bin size
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
