[package]
name = "opensaftboard"
version = "0.1.0"
edition = "2021"

[features]
logging = []

[dependencies]
argon2 = "0.5"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
lazy_static = "1.5"
nanoid = "0.4"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs","postgres","macros","chrono" ] }
tokio = { version = "1.43", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["compression-full","trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
strum_macros = "0.26.4"
log = "0.4.22"
derive_more = {version = "1.0.0", features = ["from", "display"] }
serde_with = "3.9.0"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.10.0", features = ["v7"] }
base64 = "0.22.1"
aide = { version = "0.13.4", features = ["axum", "scalar"] }
axum-macros = "0.4.2"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-extra = "0.9.4"


#build opmized for lowest bin size
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
